--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.19",
         "axios": "^1.6.4",
+        "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^1.0",
-        "vite": "^5.0"
+        "postcss": "^8.4.38",
+        "postcss-import": "^16.1.0",
+        "tailwindcss": "^3.4.3",
+        "vite": "^5.0",
+        "vite-plugin-copy": "^0.1.6"
     }
 }
