--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
         "tailwindcss": "^3.4.3",
         "vite": "^5.0",
         "vite-plugin-copy": "^0.1.6"
+    },
+    "dependencies": {
+        "chart.js": "^4.4.3"
     }
 }
