--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=WeatherApp
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -62,3 +62,6 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# WEATHER_API_BASE_URI=http://localhost:8080/api/v1/
+WEATHER_API_BASE_URI=<change>
